[package]
name = "masir"
authors = ["LGUG2Z"]
version = "0.1.2"
edition = "2021"
license-file = "LICENSE.md"

[dependencies]
winput = "0.2"
color-eyre = "0.6"
paste = "1"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-core = "0.62"
dirs = "6"
clap = { version = "4", features = ["derive"] }
global-hotkey = "0.8"

[dependencies.windows]
version = "0.62"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
]
